--- a/myweb.css
+++ b/myweb.css
@@ -15,10 +15,10 @@
 
 #display {
   font-size: 45px;
-  padding-top: 5%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 0px;
+}
+
+#display, .sectionElement h1, .sectionElement h2 {
+  margin-top: 5%;
 }
 
 #display, #intro, #menu {
@@ -26,7 +26,7 @@
   color:  #85754d;
 }
 
-#display, #intro, footer {
+#display, footer, #intro, .sectionElement {
   text-align: center;
 }
 
@@ -34,31 +34,13 @@
   font-family: 'Major Mono Display', monospace;
 }
 
-#intro, .expanded {
-  font-family: 'Noto Serif TC', serif;
-  font-size: 20px;
-}
-
 .expanded {
-    background-color: #85754d;
-    height: 200px;
-    color: white;
-}
-
-.expanded div {
-  font-style: italic;
-}
-
-.expanded div, footer {
-  font-size: 35px;
-}
-
-.expanded, header {
-  text-align: left;
+  background-color: #85754d;
+  /* height: 200px; Can css be dynamically calculated? */
 }
 
 .expanded, header, footer {
-  padding: 5%;
+  color: white;
 }
 
 #expButton {
@@ -71,7 +53,7 @@
   margin-top: 1%;
 }
 
-#expButton, #projButton {
+#expButton, header, #projButton, .sectionElement h2 , .sectionElement ul {
   text-align: left;
 }
 
@@ -84,8 +66,8 @@
   text-align: right;
 }
 
-footer p {
-  font-size: 20px;
+footer {
+  font-size: 35px;
 }
 
 header {
@@ -94,24 +76,58 @@ header {
 
 header, footer {
   background-color: #4b2e83;
-  color: white;
   font-family: 'Aleo', serif;
+}
+
+header, footer {
+  padding: 5%;
 }
 
 hr {
   margin: 5%;
 }
 
+#intro, .expanded {
+  font-family: 'Noto Serif TC', serif;
+}
+
+#intro, footer p, .sectionElement{
+  font-size: 20px;
+}
+
 #menu {
-  justify-content: space-around;
   font-size: 25px;
+}
+
+#menu, .sectionElement {
+  justify-content: space-around;
   display: flex;
   flex-direction: column;
-  text-align: left;
 }
 
 #projButton {
   margin-left: 10%;
+}
+
+.sectionElement {
+  height: 300px;
+}
+
+.sectionElement h1, .sectionElement h2 {
+  font-style: italic;
+  margin-bottom: 1%;
+}
+
+.sectionElement h2, .sectionElement p, .sectionElement ul {
+  margin-left: 5%;
+}
+
+.sectionElement p {
+  margin-right: 5%;
+}
+
+.sectionElement p, .sectionElement ul {
+  margin-bottom: 5%;
 }
 
 #skillButton {
